# Align-central-canal

./: .gitignore  LICENSE  README.md  setup.cfg  tox.ini
src/align_central_canal/: napari.yaml
src/align_central_canal/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
