[metadata]
name = Align-central-canal
version = attr: align_central_canal.__version__
description = Align central canal horizontaly
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Daggermaster3000/Align-central-canal
author = Quillan Favey
author_email = quillan.favey@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/Daggermaster3000/Align-central-canal/issues
    Documentation = https://github.com/Daggermaster3000/Align-central-canal#README.md
    Source Code = https://github.com/Daggermaster3000/Align-central-canal
    User Support = https://github.com/Daggermaster3000/Align-central-canal/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    scikit-image

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    Align-central-canal = align_central_canal:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
